# todoist_productivity_tracker

./: .gitignore  Cargo.toml  LICENSE  README.md
automation/: README.md  com.everest.todoist_productivity_tracker.plist  com.everest.todoist_tracker_weekly.plist  docs.md  todoist-tracker-postpone.sh  todoist-tracker-weekly-goal-update.sh
lib/api/: Cargo.toml  client.rest
lib/api/src/: completed_fetch.rs  filter_tasks.rs  lib.rs  update_goals.rs  update_task.rs
lib/db/: Cargo.toml
lib/db/src/: exclude_days.rs  exclude_weeks.rs  key_store.rs  lib.rs
lib/db_lib/: Cargo.toml
src/: client.rest  completed_fetch.rs  exclude_days.rs  exclude_weeks.rs  filter_tasks.rs  lib.rs  main.rs  productivity_mode.rs  update_goals.rs
src/api/: client.rest  completed_fetch.rs  filter_tasks.rs  update_goals.rs  update_task.rs
src/db/: exclude_days.rs  exclude_weeks.rs  key_store.rs
src/db_lib/: db_manager.rs
