[package]
name = "todoist_productivity_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
rusqlite = "0.37.0"
uuid = { version = "1.17.0", features = ["v4"]}
strum = { version = "0.27.2", features = ["derive"] }
directories = "6.0.0"

[[bin]]
path = "src/main.rs"
name = "todoist-tracker"
