[workspace]
members = [
    # For executable crates
    "bin/*",
    # For library crates
    "lib/*"
]
resolver = "2"

[workspace.dependencies]
# local crates - bin
cli = {path = "./bin/cli", version = "0.0.0"}
# local crates - libs
api = {path = "./lib/api", version = "0.0.0"}
db = {path = "./lib/db", version = "0.0.0"}
db_lib = {path = "./lib/db_lib", version = "0.0.0"}
goals_lib = {path = "./lib/goals_lib", version = "0.0.0"}

# non-local crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
rusqlite = "0.37.0"
uuid = { version = "1.17.0", features = ["v4"]}
strum = { version = "0.27.2", features = ["derive"] }
directories = "6.0.0"
log = "0.4.29"
env_logger = "0.11.8"
clap-verbosity-flag = "3.0.4"
